--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
             font-family: 'Poppins', sans-serif;
             overflow-x: hidden;
             background: #f8f9fa;
+            margin-left: 280px;
+            transition: margin-left 0.4s;
         }
 
-        /* Navbar */
+        body.sidebar-collapsed {
+            margin-left: 0;
+        }
+
+        /* Navbar - Now just the top bar */
         .navbar {
             position: fixed;
             top: 0;
@@ -76,44 +82,144 @@
             box-shadow: 0 6px 20px rgba(255, 107, 0, 0.5);
         }
 
-        .nav-links {
-            display: flex;
-            gap: 35px;
-            list-style: none;
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            transition: all 0.3s;
-            font-weight: 500;
-            position: relative;
-        }
-
-        .nav-links a::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background: var(--secondary-color);
-            transition: width 0.3s;
-        }
-
-        .nav-links a:hover::after {
-            width: 100%;
-        }
-
-        .nav-links a:hover {
-            color: var(--secondary-color);
-        }
-
         .menu-toggle {
+            color: white;
+            font-size: 1.8rem;
+            cursor: pointer;
+            padding: 10px;
+            transition: all 0.3s;
+        }
+
+        .menu-toggle:hover {
+            color: var(--secondary-color);
+            transform: scale(1.1);
+        }
+
+        .menu-toggle i {
+            transition: transform 0.3s;
+        }
+
+        /* Sidebar */
+        .sidebar {
+            position: fixed;
+            top: 80px;
+            left: 0;
+            width: 280px;
+            height: calc(100vh - 80px);
+            background: linear-gradient(180deg, #003d7a 0%, #002654 100%);
+            z-index: 999;
+            transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            box-shadow: 5px 0 25px rgba(0, 0, 0, 0.15);
+            overflow-y: auto;
+        }
+
+        .sidebar.mobile-hidden {
+            left: -280px;
+        }
+
+        .sidebar-header {
+            padding: 25px 20px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .sidebar-title {
+            color: white;
+            font-size: 0.85rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            opacity: 0.7;
+        }
+
+        .sidebar-close {
             display: none;
             color: white;
             font-size: 1.5rem;
             cursor: pointer;
+            padding: 8px;
+            transition: all 0.3s;
+            position: absolute;
+            top: 15px;
+            right: 15px;
+        }
+
+        .sidebar-close:hover {
+            color: var(--secondary-color);
+            transform: rotate(90deg);
+        }
+
+        .sidebar-nav {
+            padding: 10px 0;
+        }
+
+        .sidebar-nav a {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            padding: 16px 25px;
+            color: rgba(255, 255, 255, 0.8);
+            text-decoration: none;
+            transition: all 0.3s;
+            font-weight: 500;
+            font-size: 1rem;
+            border-left: 4px solid transparent;
+            position: relative;
+        }
+
+        .sidebar-nav a:hover {
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            padding-left: 30px;
+        }
+
+        .sidebar-nav a.active {
+            background: rgba(255, 107, 0, 0.15);
+            border-left-color: var(--secondary-color);
+            color: white;
+        }
+
+        .sidebar-nav a.active::before {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 4px;
+            height: 60%;
+            background: var(--secondary-color);
+            border-radius: 4px 0 0 4px;
+        }
+
+        .sidebar-nav a i {
+            font-size: 1.2rem;
+            width: 24px;
+            color: var(--secondary-color);
+            transition: all 0.3s;
+        }
+
+        .sidebar-nav a.active i {
+            transform: scale(1.15);
+        }
+
+        /* Sidebar Overlay - Only for mobile */
+        .sidebar-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.6);
+            z-index: 998;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.4s;
+            backdrop-filter: blur(3px);
+            display: none;
+        }
+
+        .sidebar-overlay.active {
+            opacity: 1;
+            visibility: visible;
         }
 
         /* Hero Section */
@@ -910,6 +1016,31 @@
         }
 
         /* Responsive */
+        @media (max-width: 968px) {
+            body {
+                margin-left: 0;
+            }
+
+            .sidebar {
+                left: -280px;
+                top: 0;
+                height: 100vh;
+                z-index: 1001;
+            }
+
+            .sidebar.active {
+                left: 0;
+            }
+
+            .sidebar-overlay {
+                display: block;
+            }
+
+            .sidebar-close {
+                display: block;
+            }
+        }
+
         @media (max-width: 768px) {
             .navbar {
                 padding: 15px 20px;
@@ -922,27 +1053,6 @@
 
             .navbar-brand {
                 font-size: 1.3rem;
-            }
-
-            .nav-links {
-                display: none;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                right: 0;
-                background: rgba(0, 61, 122, 0.98);
-                flex-direction: column;
-                padding: 20px;
-                gap: 20px;
-                box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            }
-
-            .nav-links.active {
-                display: flex;
-            }
-
-            .menu-toggle {
-                display: block;
             }
 
             .hero h1 {
@@ -986,19 +1096,33 @@
     </style>
 </head>
 <body>
+    <!-- Sidebar Overlay -->
+    <div class="sidebar-overlay" id="sidebarOverlay"></div>
+
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+        <div class="sidebar-header">
+            <div class="sidebar-title">Navigation</div>
+            <div class="sidebar-close" id="sidebarClose">
+                <i class="fas fa-times"></i>
+            </div>
+        </div>
+        <nav class="sidebar-nav">
+            <a href="#home" class="active"><i class="fas fa-home"></i> Home</a>
+            <a href="#offers"><i class="fas fa-gift"></i> Offers</a>
+            <a href="#services"><i class="fas fa-concierge-bell"></i> Services</a>
+            <a href="#destinations"><i class="fas fa-map-marked-alt"></i> Destinations</a>
+            <a href="#contact-form"><i class="fas fa-paper-plane"></i> Book Now</a>
+        </nav>
+    </div>
+
+    <!-- Top Navbar -->
     <nav class="navbar">
         <a href="#" class="navbar-brand">
             <img src="patron-icon.jpeg" alt="Patron Tours Logo">
             Patron Tours
         </a>
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#offers">Offers</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#destinations">Destinations</a></li>
-            <li><a href="#contact-form">Book Now</a></li>
-        </ul>
-        <div class="menu-toggle">
+        <div class="menu-toggle" id="menuToggle">
             <i class="fas fa-bars"></i>
         </div>
     </nav>
@@ -1270,10 +1394,10 @@
                 <a href="https://wa.me/919596279731" target="_blank" class="social-icon whatsapp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="#" target="_blank" class="social-icon facebook">
+                <a href="https://www.facebook.com/" target="_blank" class="social-icon facebook">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="#" target="_blank" class="social-icon instagram">
+                <a href="https://www.instagram.com/patrontourandtravel_/" target="_blank" class="social-icon instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
@@ -1285,6 +1409,72 @@
     </button>
 
     <script>
+        // Sidebar functionality
+        const sidebar = document.getElementById('sidebar');
+        const sidebarOverlay = document.getElementById('sidebarOverlay');
+        const menuToggle = document.getElementById('menuToggle');
+        const sidebarClose = document.getElementById('sidebarClose');
+        const body = document.body;
+
+        function toggleSidebar() {
+            if (window.innerWidth <= 968) {
+                // Mobile behavior - slide in/out
+                sidebar.classList.toggle('active');
+                sidebarOverlay.classList.toggle('active');
+                body.style.overflow = sidebar.classList.contains('active') ? 'hidden' : '';
+            } else {
+                // Desktop behavior - collapse/expand
+                sidebar.classList.toggle('mobile-hidden');
+                body.classList.toggle('sidebar-collapsed');
+            }
+        }
+
+        function closeSidebar() {
+            sidebar.classList.remove('active');
+            sidebarOverlay.classList.remove('active');
+            body.style.overflow = '';
+        }
+
+        menuToggle.addEventListener('click', toggleSidebar);
+        sidebarClose.addEventListener('click', closeSidebar);
+        sidebarOverlay.addEventListener('click', closeSidebar);
+
+        // Active section detection
+        const sections = document.querySelectorAll('section[id]');
+        const navLinks = document.querySelectorAll('.sidebar-nav a');
+
+        function setActiveLink() {
+            let currentSection = '';
+            
+            sections.forEach(section => {
+                const sectionTop = section.offsetTop;
+                const sectionHeight = section.clientHeight;
+                if (window.pageYOffset >= sectionTop - 200) {
+                    currentSection = section.getAttribute('id');
+                }
+            });
+
+            navLinks.forEach(link => {
+                link.classList.remove('active');
+                if (link.getAttribute('href') === `#${currentSection}`) {
+                    link.classList.add('active');
+                }
+            });
+        }
+
+        window.addEventListener('scroll', setActiveLink);
+        setActiveLink(); // Set initial active state
+
+        // Close sidebar when clicking a link on mobile
+        navLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                if (window.innerWidth <= 968) {
+                    closeSidebar();
+                }
+            });
+        });
+
+        // Animation observer
         const observerOptions = {
             threshold: 0.15,
             rootMargin: '0px 0px -80px 0px'
@@ -1302,6 +1492,7 @@
             observer.observe(el);
         });
 
+        // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
@@ -1312,6 +1503,7 @@
             });
         });
 
+        // Navbar background change on scroll
         window.addEventListener('scroll', () => {
             const navbar = document.querySelector('.navbar');
             const currentScroll = window.pageYOffset;
@@ -1320,13 +1512,6 @@
             } else {
                 navbar.style.background = 'rgba(0, 61, 122, 0.95)';
             }
-        });
-
-        const menuToggle = document.querySelector('.menu-toggle');
-        const navLinks = document.querySelector('.nav-links');
-
-        menuToggle?.addEventListener('click', () => {
-            navLinks.classList.toggle('active');
         });
 
         function scrollToForm(packageName) {
@@ -1365,7 +1550,7 @@
             errorMessage.style.display = 'none';
             
             try {
-                const response = await fetch('https://formsubmit.co/ajax/waniyawar91@gmail.com', {
+                const response = await fetch('https://formsubmit.co/ajax/patrontravel006@gmail.com', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
