--- a/index.html
+++ b/index.html
@@ -304,8 +304,80 @@
             margin-bottom: 30px;
             font-weight: 800;
             text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.4);
-            line-height: 1.2;
+            line-height: 1.3;
             letter-spacing: -1px;
+            perspective: 1000px;
+        }
+
+        .hero h1 .word {
+            display: inline-block;
+            opacity: 0;
+            margin: 0 8px;
+        }
+
+        .hero h1 .word.from-left {
+            animation: slideFromLeft 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+        }
+
+        .hero h1 .word.from-right {
+            animation: slideFromRight 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+        }
+
+        .hero h1 .word.from-top {
+            animation: slideFromTop 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+        }
+
+        .hero h1 .word.from-bottom {
+            animation: slideFromBottom 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+        }
+
+        .hero h1 .patron { color: #ff6b00; text-shadow: 0 0 20px rgba(255, 107, 0, 0.6); }
+        .hero h1 .tour { color: #00d4ff; text-shadow: 0 0 20px rgba(0, 212, 255, 0.6); }
+        .hero h1 .and { color: #fff; }
+        .hero h1 .travels { color: #ffd700; text-shadow: 0 0 20px rgba(255, 215, 0, 0.6); }
+
+        @keyframes slideFromLeft {
+            0% {
+                opacity: 0;
+                transform: translateX(-200px) rotateY(-90deg);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0) rotateY(0);
+            }
+        }
+
+        @keyframes slideFromRight {
+            0% {
+                opacity: 0;
+                transform: translateX(200px) rotateY(90deg);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0) rotateY(0);
+            }
+        }
+
+        @keyframes slideFromTop {
+            0% {
+                opacity: 0;
+                transform: translateY(-200px) rotateX(90deg);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0) rotateX(0);
+            }
+        }
+
+        @keyframes slideFromBottom {
+            0% {
+                opacity: 0;
+                transform: translateY(200px) rotateX(-90deg);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0) rotateX(0);
+            }
         }
 
         .hero-subtitle {
@@ -1137,7 +1209,17 @@
             <i class="fas fa-globe-asia floating-icon"></i>
         </div>
         <div class="hero-content">
-            <h1>Explore Kashmir & Beyond with<br>Patron Tour And Travels</h1>
+            <h1>
+                <span class="word from-left">Explore</span>
+                <span class="word from-right">Kashmir</span>
+                <span class="word from-top">&</span>
+                <span class="word from-bottom">Beyond</span>
+                <span class="word from-left">with</span><br>
+                <span class="word patron from-right" style="animation-delay: 0.5s;">Patron</span>
+                <span class="word tour from-top" style="animation-delay: 0.6s;">Tour</span>
+                <span class="word and from-bottom" style="animation-delay: 0.7s;">And</span>
+                <span class="word travels from-left" style="animation-delay: 0.8s;">Travels</span>
+            </h1>
             <p class="hero-subtitle">Affordable • Reliable • Customized Travel Experiences</p>
             <div class="hero-buttons">
                 <a href="https://wa.me/919596279731?text=Hi%2C%20I%20want%20to%20book%20a%20tour%20package.%20Please%20help%20me%20with%20the%20details." class="btn btn-primary">
