--- a/index.html
+++ b/index.html
@@ -300,83 +300,46 @@
         }
 
         .hero h1 {
-            font-size: 4.5rem;
+            font-size: 3.8rem;
             margin-bottom: 30px;
             font-weight: 800;
             text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.4);
             line-height: 1.3;
             letter-spacing: -1px;
-            perspective: 1000px;
         }
 
         .hero h1 .word {
             display: inline-block;
             opacity: 0;
             margin: 0 8px;
+            animation: smoothSlideIn 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
         }
 
-        .hero h1 .word.from-left {
-            animation: slideFromLeft 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
-        }
-
-        .hero h1 .word.from-right {
-            animation: slideFromRight 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
-        }
-
-        .hero h1 .word.from-top {
-            animation: slideFromTop 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
-        }
-
-        .hero h1 .word.from-bottom {
-            animation: slideFromBottom 1s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
-        }
+        .hero h1 .word:nth-child(1) { animation-delay: 0.1s; }
+        .hero h1 .word:nth-child(2) { animation-delay: 0.2s; }
+        .hero h1 .word:nth-child(3) { animation-delay: 0.3s; }
+        .hero h1 .word:nth-child(4) { animation-delay: 0.4s; }
+        .hero h1 .word:nth-child(5) { animation-delay: 0.5s; }
+        .hero h1 .word.patron { animation-delay: 0.7s; }
+        .hero h1 .word.tour { animation-delay: 0.8s; }
+        .hero h1 .word.and { animation-delay: 0.9s; }
+        .hero h1 .word.travels { animation-delay: 1s; }
 
         .hero h1 .patron { color: #ff6b00; text-shadow: 0 0 20px rgba(255, 107, 0, 0.6); }
         .hero h1 .tour { color: #00d4ff; text-shadow: 0 0 20px rgba(0, 212, 255, 0.6); }
         .hero h1 .and { color: #fff; }
         .hero h1 .travels { color: #ffd700; text-shadow: 0 0 20px rgba(255, 215, 0, 0.6); }
 
-        @keyframes slideFromLeft {
+        @keyframes smoothSlideIn {
             0% {
                 opacity: 0;
-                transform: translateX(-200px) rotateY(-90deg);
+                transform: translateY(40px) scale(0.9);
+                filter: blur(10px);
             }
             100% {
                 opacity: 1;
-                transform: translateX(0) rotateY(0);
-            }
-        }
-
-        @keyframes slideFromRight {
-            0% {
-                opacity: 0;
-                transform: translateX(200px) rotateY(90deg);
-            }
-            100% {
-                opacity: 1;
-                transform: translateX(0) rotateY(0);
-            }
-        }
-
-        @keyframes slideFromTop {
-            0% {
-                opacity: 0;
-                transform: translateY(-200px) rotateX(90deg);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0) rotateX(0);
-            }
-        }
-
-        @keyframes slideFromBottom {
-            0% {
-                opacity: 0;
-                transform: translateY(200px) rotateX(-90deg);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0) rotateX(0);
+                transform: translateY(0) scale(1);
+                filter: blur(0);
             }
         }
 
@@ -1111,6 +1074,18 @@
             .sidebar-close {
                 display: block;
             }
+
+            /* Sticky badges on mobile */
+            .offer-badge {
+                position: sticky;
+                top: 80px;
+                z-index: 10;
+                margin: 0;
+                border-radius: 0 0 20px 20px;
+                width: fit-content;
+                margin-left: auto;
+                margin-right: auto;
+            }
         }
 
         @media (max-width: 768px) {
@@ -1210,15 +1185,15 @@
         </div>
         <div class="hero-content">
             <h1>
-                <span class="word from-left">Explore</span>
-                <span class="word from-right">Kashmir</span>
-                <span class="word from-top">&</span>
-                <span class="word from-bottom">Beyond</span>
-                <span class="word from-left">with</span><br>
-                <span class="word patron from-right" style="animation-delay: 0.5s;">Patron</span>
-                <span class="word tour from-top" style="animation-delay: 0.6s;">Tour</span>
-                <span class="word and from-bottom" style="animation-delay: 0.7s;">And</span>
-                <span class="word travels from-left" style="animation-delay: 0.8s;">Travels</span>
+                <span class="word">Explore</span>
+                <span class="word">Kashmir</span>
+                <span class="word">&</span>
+                <span class="word">Beyond</span>
+                <span class="word">with</span><br>
+                <span class="word patron">Patron</span>
+                <span class="word tour">Tour</span>
+                <span class="word and">And</span>
+                <span class="word travels">Travels</span>
             </h1>
             <p class="hero-subtitle">Affordable • Reliable • Customized Travel Experiences</p>
             <div class="hero-buttons">
