--- a/index.html
+++ b/index.html
@@ -425,6 +425,77 @@
             box-shadow: 0 15px 40px rgba(255, 107, 0, 0.6);
         }
 
+        /* Mobile Floating Offer Buttons */
+        .mobile-offer-buttons {
+            display: none;
+            position: fixed;
+            right: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 999;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .floating-offer-btn {
+            width: 70px;
+            height: 70px;
+            border-radius: 50%;
+            border: none;
+            cursor: pointer;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+            transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.7rem;
+            font-weight: 700;
+            color: white;
+            text-align: center;
+            padding: 8px;
+            line-height: 1.2;
+            animation: floatIn 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+            opacity: 0;
+        }
+
+        @keyframes floatIn {
+            to {
+                opacity: 1;
+            }
+        }
+
+        .floating-offer-btn:nth-child(1) {
+            animation-delay: 0.3s;
+        }
+
+        .floating-offer-btn:nth-child(2) {
+            animation-delay: 0.5s;
+        }
+
+        .floating-offer-btn.hot-deal {
+            background: linear-gradient(135deg, #ff6b00, #ff8c00);
+        }
+
+        .floating-offer-btn.tulip-special {
+            background: linear-gradient(135deg, #e91e63, #f06292);
+        }
+
+        .floating-offer-btn:hover {
+            transform: scale(1.15) rotate(5deg);
+            box-shadow: 0 12px 35px rgba(0, 0, 0, 0.4);
+        }
+
+        .floating-offer-btn:active {
+            transform: scale(0.95);
+        }
+
+        .floating-offer-btn .emoji {
+            font-size: 1.5rem;
+            display: block;
+            margin-bottom: 3px;
+        }
+
         /* Exclusive Offers Section */
         .offers-section {
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
@@ -480,6 +551,7 @@
             opacity: 0;
             transform: translateY(40px);
             position: relative;
+            scroll-margin-top: 100px;
         }
 
         .offer-card.animate {
@@ -1037,7 +1109,7 @@
             text-align: center;
             font-size: 1.1rem;
             font-weight: 700;
-            z-index: 999;
+            z-index: 998;
             box-shadow: 0 -5px 20px rgba(0, 0, 0, 0.2);
             cursor: pointer;
             border: none;
@@ -1075,16 +1147,8 @@
                 display: block;
             }
 
-            /* Sticky badges on mobile */
-            .offer-badge {
-                position: sticky;
-                top: 80px;
-                z-index: 10;
-                margin: 0;
-                border-radius: 0 0 20px 20px;
-                width: fit-content;
-                margin-left: auto;
-                margin-right: auto;
+            .mobile-offer-buttons {
+                display: flex;
             }
         }
 
@@ -1125,6 +1189,20 @@
             body {
                 padding-bottom: 70px;
             }
+
+            .mobile-offer-buttons {
+                right: 10px;
+            }
+
+            .floating-offer-btn {
+                width: 65px;
+                height: 65px;
+                font-size: 0.65rem;
+            }
+
+            .floating-offer-btn .emoji {
+                font-size: 1.3rem;
+            }
         }
 
         @media (max-width: 480px) {
@@ -1138,6 +1216,16 @@
 
             .offer-title {
                 font-size: 1.6rem;
+            }
+
+            .floating-offer-btn {
+                width: 60px;
+                height: 60px;
+                font-size: 0.6rem;
+            }
+
+            .floating-offer-btn .emoji {
+                font-size: 1.2rem;
             }
         }
     </style>
@@ -1161,6 +1249,18 @@
             <a href="#destinations"><i class="fas fa-map-marked-alt"></i> Destinations</a>
             <a href="#contact-form"><i class="fas fa-paper-plane"></i> Book Now</a>
         </nav>
+    </div>
+
+    <!-- Mobile Floating Offer Buttons -->
+    <div class="mobile-offer-buttons">
+        <button class="floating-offer-btn hot-deal" onclick="scrollToOffer('honeymoon')">
+            <span class="emoji">🔥</span>
+            <span>HOT<br>DEAL</span>
+        </button>
+        <button class="floating-offer-btn tulip-special" onclick="scrollToOffer('tulip')">
+            <span class="emoji">🌷</span>
+            <span>TULIP<br>SPECIAL</span>
+        </button>
     </div>
 
     <!-- Top Navbar -->
@@ -1210,7 +1310,7 @@
         <p class="section-subtitle">Limited time special packages - Book now and save!</p>
         
         <div class="offers-grid">
-            <div class="offer-card">
+            <div class="offer-card" id="honeymoon">
                 <div class="offer-badge">🔥 HOT DEAL</div>
                 <div class="offer-header">
                     <h3 class="offer-title">💑 Honeymoon Package</h3>
@@ -1252,7 +1352,7 @@
                 </div>
             </div>
 
-            <div class="offer-card">
+            <div class="offer-card" id="tulip">
                 <div class="offer-badge">🌷 TULIP SPECIAL</div>
                 <div class="offer-header">
                     <h3 class="offer-title">🌷 Tulip Festival Special</h3>
@@ -1570,6 +1670,19 @@
                 navbar.style.background = 'rgba(0, 61, 122, 0.95)';
             }
         });
+
+        // Scroll to specific offer
+        function scrollToOffer(offerId) {
+            const offerCard = document.getElementById(offerId);
+            if (offerCard) {
+                offerCard.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                // Add a highlight effect
+                offerCard.style.transform = 'scale(1.02)';
+                setTimeout(() => {
+                    offerCard.style.transform = '';
+                }, 600);
+            }
+        }
 
         function scrollToForm(packageName) {
             const formSection = document.getElementById('contact-form');
