--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
             </div>
 
             <div class="offer-card" id="tulip">
-                <div class="offer-badge">🌷 TULIP SPECIAL</div>
+                <div class="offer-badge">🌷 TULIP DEAL</div>
                 <div class="offer-header">
                     <h3 class="offer-title">🌷 Tulip Festival Special</h3>
                     <p class="offer-duration">4 Nights / 5 Days</p>
